--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.19.2"
+    "@fastify/static": "^6.10.2",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.19.2",
+    "fs": "^0.0.1-security"
   }
 }
